# gui-scope

./: .gitignore  AGENT.md  HOWTO.md  README.md  SKILL.md  cli.py  example.py  gui-scope  gui_scope.py  install.sh  pyproject.toml  setup.sh
.claude/commands/: burp-suite-security-testing.md  gui-scope.md
backends/: __init__.py  base.py  linux_common.py  linux_wayland.py  linux_x11.py  macos.py  wayland_token.py
