[project]
name = "gui-scope"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "atomacos; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    # Linux (Wayland + X11 backends). AT-SPI tree/find/click/type is shared
    # across both display servers via PyGObject; python-xlib is only
    # imported by the X11 backend (input synthesis + screenshot via XTEST).
    "PyGObject; sys_platform == 'linux'",
    "Pillow; sys_platform == 'linux'",
    "psutil; sys_platform == 'linux'",
    "python-xlib; sys_platform == 'linux'",
]

[project.scripts]
gui-scope = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["gui_scope.py", "cli.py", "backends/**/*.py"]
